[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/purple_breath.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/purplebreath.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = PoolVector2Array( -305, 0, 280, 305, 280, -305 )

[node name="purple_breath" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
speed = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="lifetime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_purple_breath_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


